--- a/oms.yml
+++ b/oms.yml
@@ -1,18 +1,19 @@
-omg: 1
-lifecycle:
-  startup:
-    command: ['microservice-trello']
+oms: 1
 info:
   version: 1.0.0
   title: Trello
   description: This is an trello service
   contact:
-    name: Rohit Shetty
-    url: https://github.com/ht68rohit
-    email: rohits@heaptrace.com
+    name: Open Microservices
+    url: 'https://openmicroservices.org'
+    email: core@openmicroservices.org
   license:
     name: MIT
-    url: https://opensource.org/licenses/MIT
+    url: 'https://opensource.org/licenses/MIT'
+lifecycle:
+  startup:
+    command:
+      - microservice-trello
 actions:
   createBoard:
     help: Create new board in trello.
@@ -289,7 +290,7 @@ actions:
             type: boolean
             in: requestBody
             required: true
-            help:
+            help: >-
               Set true to get all existing cards or false to get only new card
               added to board after subscription.
         http:
@@ -378,9 +379,6 @@ actions:
         url:
           help: Returns URL of the trello board.
           type: string
-        #prefs:
-        #  help: The preference of the trello board.
-        #  type: object
 environment:
   API_KEY:
     type: string
